# morny

./: CMakeLists.txt  prebuild.bat
include/morny/: lexer.h  parser.h
src/: lexer.cpp  main.cpp  parser.cpp
